--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "animejs": "^3.1.0",
     "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap-4-grid": "^3.1.1",
     "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "eva-icons": "^1.1.2",
     "html-webpack-partials-plugin": "^0.5.3",
     "html-webpack-plugin": "^3.2.0",
     "jump.js": "^1.0.2",
@@ -40,8 +45,6 @@
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
-    "typography": "^0.16.19",
-    "typography-theme-grand-view": "^0.16.19",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
